--- a/main.html
+++ b/main.html
@@ -9,6 +9,8 @@
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
+	    
+	<img src="https://www.bing.com/images/search?q=Dog&FORM=IQFRBA&id=E0643A56D15AB535D08206895D8156F39809FA1C" alt="Image">
 </script>
 
 </body>
