--- a/main.html
+++ b/main.html
@@ -9,7 +9,9 @@
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
-	    <img src = "https://th.bing.com/th/id/R.fda6ee9c5f523def0c20e3d857514af1?rik=eEVe2ndRdQkCBA&riu=http%3a%2f%2fwww.pixelstalk.net%2fwp-content%2fuploads%2f2016%2f08%2fCute-Puppies-Dog-Wallpaper.jpg&ehk=YlJ39q3L3s3ZTL%2fbcGAftWgEesm%2bUr5nFX7%2bs0kt4gs%3d&risl=&pid=ImgRaw&r=0" alt = "puppy's image" >
+<img src="https://thumbs.dreamstime.com/z/fall-beagle-dog-pet-sitting-outdoors-35091469.jpg" alt="cute dogs">
+
+
 	   
 	
 </script>
